# AlphaForge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  Makefile.help.mk  PROJECT_SUMMARY.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml  vercel.json
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CHAINS.md  CONTRIBUTING.md  DEPLOYMENT.md  INDICATORS.md  ML.md  RUNBOOK.md  SECURITY.md  STRATEGY_DSL.md  TESTING.md
docs/adr/: 0001-language-choices.md  0002-event-bus.md  0003-strategy-dsl.md  0004-rbac.md
examples/audit/: clean_token_source.sol  sample_audit_report.json  sample_bytecode.hex  sample_source.sol
examples/postman/: AlphaForge.postman_collection.json
examples/sql/: seed.sql
examples/strategies/: anomaly_signal.yaml  bollinger_meanrevert.yaml  breakout_donchian.yaml  ema_cross.yaml
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
infra/k8s/: api.yaml  auditor.yaml  clickhouse.yaml  configmap.yaml  cronjob.yaml  frontend.yaml  hpa.yaml  ingestor.yaml  kafka.yaml  kustomization.yaml  ml.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  (+7 more)
research/: README.md
scripts/: dev_sample_events.py  init-db.sh  seed.py  wait-for-it.sh
services/api/: Dockerfile  alembic.ini  index.py  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 20260101_0001_init.py
services/api/src/alphaforge_api/: __init__.py  errors.py  main.py  middleware.py
services/api/src/alphaforge_api/api/v1/: __init__.py
services/api/src/alphaforge_api/api/v1/routes/: alerts.py  apikeys.py  audits.py  auth.py  backtests.py  chains.py  healthz.py  market.py  signals.py  strategies.py  users.py  webhook.py
services/api/src/alphaforge_api/core/: config.py  database.py  kafka_client.py  redis_client.py  security.py
services/api/src/alphaforge_api/graphql/: schema.py
services/api/src/alphaforge_api/models/: __init__.py  alert.py  audit.py  backtest.py  base.py  signal.py  strategy.py  user.py
services/api/src/alphaforge_api/repositories/: __init__.py  alert.py  audit.py  backtest.py  signal.py  strategy.py  user.py
services/api/src/alphaforge_api/schemas/: __init__.py  alert.py  audit.py  backtest.py  common.py  signal.py  strategy.py  user.py
services/api/src/alphaforge_api/services/: __init__.py  audit_service.py  backtest_service.py  dsl_loader.py  market_service.py  strategy_service.py
services/api/src/alphaforge_api/ws/: router.py
services/api/tests/: conftest.py  test_dsl_loader.py  test_dsl_loader_more.py  test_market_extras.py  test_market_service.py  test_security.py  test_security_extras.py
services/auditor/: Dockerfile  index.py  pyproject.toml
services/auditor/src/alphaforge_auditor/: __init__.py  config.py  consumer.py  engine.py  main.py  scoring.py
services/auditor/src/alphaforge_auditor/fetchers/: bytecode.py  source.py
services/auditor/src/alphaforge_auditor/scanners/: bytecode_scanner.py  source_scanner.py  token_scanner.py
services/auditor/tests/: test_bytecode_scanner.py  test_engine_smoke.py  test_scoring.py  test_source_scanner.py
services/cli/: Dockerfile  index.py  pyproject.toml
services/cli/src/alphaforge_cli/: __init__.py  app.py  client.py  config.py
services/cli/src/alphaforge_cli/commands/: __init__.py  audits.py  auth.py  backtests.py  chains.py  market.py  signals.py  strategies.py
services/cli/tests/: test_app_smoke.py  test_config_roundtrip.py
services/ingestor/: Dockerfile  index.py  pyproject.toml
services/ingestor/src/alphaforge_ingestor/: __init__.py  config.py  kafka_sink.py  main.py
services/ingestor/src/alphaforge_ingestor/adapters/: base.py  cosmos.py  evm.py  solana.py
services/ingestor/src/alphaforge_ingestor/pipeline/: decoder.py  dispatcher.py  enricher.py  normaliser.py
services/ingestor/tests/: test_decoder.py  test_normaliser.py
services/ml/: Dockerfile  index.py  pyproject.toml
services/ml/src/alphaforge_ml/: __init__.py  config.py  main.py
services/ml/src/alphaforge_ml/consumers/: anomaly_loop.py  prediction_loop.py  sentiment_loop.py
services/ml/src/alphaforge_ml/features/: extractors.py
services/ml/src/alphaforge_ml/models/: anomaly.py  autoencoder.py  forecaster.py  sentiment.py
services/ml/tests/: test_anomaly.py  test_features.py  test_features_more.py  test_sentiment.py
services/quantcore/: Cargo.toml  README.md  index.py  pyproject.toml
services/quantcore/python/alphaforge_quantcore/: __init__.py
services/quantcore/python/tests/: test_facade.py  test_fallback.py
services/quantcore/src/: backtest.rs  book.rs  indicators.rs  lib.rs  risk.rs
services/quantcore/tests/: book_test.rs  indicators_test.rs  risk_test.rs
services/worker/: Dockerfile  index.py  pyproject.toml
services/worker/src/alphaforge_worker/: __init__.py  celery_app.py  config.py  tasks.py
services/worker/src/alphaforge_worker/dsl/: __init__.py  ast.py  compiler.py  evaluator.py  parser.py
services/worker/src/alphaforge_worker/indicators/: __init__.py  advanced.py  basic.py  registry.py
services/worker/src/alphaforge_worker/runtime/: backtest_runner.py  data.py  live_runner.py  metrics.py  portfolio.py  risk.py
services/worker/tests/: test_dsl_compiler.py  test_dsl_compiler_more.py  test_dsl_parser.py  test_evaluator.py  test_evaluator_extras.py  test_indicator_runtime.py  test_indicators.py  test_metrics.py  test_portfolio.py
shared/: pyproject.toml
shared/src/alphaforge_shared/: __init__.py  chains.py  events.py  exceptions.py  kafka.py  logging.py  settings.py  symbols.py  telemetry.py  timeframes.py  topics.py  utils.py
shared/tests/: test_chains.py  test_events.py  test_utils.py
(+93 files in other folders)
