[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-shared"
version = "0.1.0"
description = "Shared schemas, chain registry and Kafka topics for AlphaForge"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "structlog>=24.1",
  "orjson>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]
