[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-api"
version = "0.1.0"
description = "AlphaForge API gateway: REST + GraphQL + WebSocket subscriptions"
requires-python = ">=3.11"
dependencies = [
  "alphaforge-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "httpx>=0.27",
  "redis>=5.0",
  "aiokafka>=0.11",
  "strawberry-graphql[fastapi]>=0.235",
  "websockets>=13",
  "loguru>=0.7",
  "orjson>=3.10",
  "tenacity>=9.0",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
