[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-auditor"
version = "0.1.0"
description = "Smart contract security auditor"
requires-python = ">=3.11"
dependencies = [
  "alphaforge-shared",
  "aiokafka>=0.11",
  "httpx>=0.27",
  "redis>=5",
  "structlog>=24",
  "pydantic-settings>=2.4",
  "orjson>=3.10",
  "tenacity>=8",
  "prometheus-client>=0.20",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
