[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-cli"
version = "0.1.0"
description = "Power-user CLI for AlphaForge"
requires-python = ">=3.11"
dependencies = [
  "alphaforge-shared",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "pyyaml>=6",
  "orjson>=3.10",
]

[project.scripts]
alphaforge = "alphaforge_cli.app:app"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
