[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-ingestor"
version = "0.1.0"
description = "Multi-chain on-chain event ingestion for AlphaForge"
requires-python = ">=3.11"
dependencies = [
  "alphaforge-shared",
  "httpx>=0.27",
  "websockets>=13",
  "aiokafka>=0.11",
  "pydantic-settings>=2.4",
  "structlog>=24",
  "tenacity>=9",
  "orjson>=3.10",
  "eth-utils>=4.1",
  "base58>=2.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
