[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-ml"
version = "0.1.0"
description = "ML inference service for AlphaForge"
requires-python = ">=3.11"
dependencies = [
  "alphaforge-shared",
  "numpy>=1.26",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "aiokafka>=0.11",
  "redis>=5",
  "httpx>=0.27",
  "structlog>=24",
  "pydantic-settings>=2.4",
  "orjson>=3.10",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
torch = ["torch>=2.3"]
nlp = ["transformers>=4.42"]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
