[package]
name = "alphaforge-quantcore"
version = "0.1.0"
edition = "2021"
authors = ["AlphaForge Team"]
description = "High-performance order book simulator and indicator core (PyO3 bindings)"
license = "MIT"

[lib]
name = "alphaforge_quantcore"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
ordered-float = "4.2"
fixed-hash = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
itertools = "0.13"
once_cell = "1.19"
tracing = "0.1"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[features]
default = []
python = []
