[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "alphaforge-quantcore"
version = "0.1.0"
description = "Rust core for AlphaForge — high-performance order book simulator and indicators"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "alphaforge_quantcore._native"
python-source = "python"
