[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge-worker"
version = "0.1.0"
description = "Strategy execution, backtesting and DSL engine"
requires-python = ">=3.11"
dependencies = [
  "alphaforge-shared",
  "celery>=5.4",
  "redis>=5",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pyyaml>=6",
  "pydantic-settings>=2.4",
  "structlog>=24",
  "orjson>=3.10",
  "httpx>=0.27",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
